      commit has been dramatically reduced.
    * Avoid noop SQL calls during repository commits when no redirects are
      being commited.
    * Repository commits now merge all dependencies from the temporary tables
      into the final tables at once rather than once per trove.
    * Repository commits now updates permission tables for all new troves
      at once.

  o Build Changes:
    * When cooking groups where checkOnlyByDefaultDeps is set to False added
      dependencies will now inherit the byDefaultness of the depending
      component. (CNY-3195)
    * The imageGroup flag in group recipes now implies
      checkOnlyByDefaultDeps=False. (CNY-3195)

Changes in 2.0.46:
  o New Features
    * If python-keyutils is available, cvc will try to interact with
      the user's session keyring. (CNY-3190)
    * Conary now uses xz in preference to unlzma to decompress lzma
      data. (CNY-3194)
    * A new function, parseChangeSpec, that parses a single trove
      update specification such as name=ver1[flv1]--ver2[flv2], was
      added to cmdline.py. (CNY-3197)

  o Internal Changes:
    * The code path leading to getChangeSet was reworked to use
      significantly fewer repository calls, resulting in a massive
      speedup for uncached, large requests.

  o Bug Fixes:
    * PGP passphrases, required for signing troves, are now fetched
      using a callback. (CNY-3189)
    * Repositories running on postgresql can properly handle queries
      for labels sharing the hostname portion. (CNY-3192)
    * The sha1 for files in a repository could be improperly left as
      NULL for some cases involving shadows. This has been fixed,
      and migrating existing repositories to version 17.3 will fix
      existing missing sha1 checksums.
    * Group pre-execution scripts now run exactly before any package
      that is part of the group. Previously, pre-execution scripts
      were run at the very beginning of the update, where the