@@ -671,12 +671,12 @@ class TroveStore:
         INSERT INTO tmpNewTroves (itemId, branchId, flavorId,
                                   instanceId, versionId,
                                   finalTimeStamp, troveType,
-                                  oldInstanceId)
-        VALUES (?, ?, ?, ?, ?, ?, ?, ?)
+                                  oldInstanceId, hidden)
+        VALUES (?, ?, ?, ?, ?, ?, ?, ?, ?)
         """, troveItemId, troveBranchId, troveFlavorId,
              troveInstanceId, troveVersionId,
              '%.3f' % trv.getVersion().timeStamps()[-1],
-             trv.getType(), oldInstanceId)
+             trv.getType(), oldInstanceId, int(hidden))
 
         # Fold tmpNewFiles into FileStreams
         if len(newFilesInsertList):
@@ -787,6 +787,7 @@ class TroveStore:
         schema.resetTable(cu, 'tmpNewFiles')
         schema.resetTable(cu, 'tmpNewTroves')
         schema.resetTable(cu, 'tmpNewStreams')
+        schema.resetTable(cu, 'tmpNewLatest')
         self.depAdder = deptable.BulkDependencyLoader(self.db, cu)
 
     def addTroveSetDone(self):
@@ -794,10 +795,137 @@ class TroveStore:
         self._mergeIncludedTroves(cu)
         self._mergeTroveNewFiles(cu)
 
-        # this updates the LatestCache as well
         self.ri.addInstanceIdSet('tmpNewTroves', 'instanceId')
-
         self.depAdder.done()
+
+        d = { 'LATEST_TYPE_ANY' : versionops.LATEST_TYPE_ANY,
+              'LATEST_TYPE_PRESENT' : versionops.LATEST_TYPE_PRESENT,
+              'LATEST_TYPE_NORMAL' : versionops.LATEST_TYPE_NORMAL,
+              'TROVE_TYPE_REDIRECT' : trove.TROVE_TYPE_REDIRECT,
+              'TROVE_TYPE_REMOVED' : trove.TROVE_TYPE_REMOVED,
+              'INSTANCE_PRESENT_HIDDEN' : instances.INSTANCE_PRESENT_HIDDEN }
+
+        # LATEST_TYPE_ANY -- if what was just committed is newer, it wins.
+        # if not, it loses. Note that Nodes.finalTimestamp could be NULL,
+        # and the logic in the CASE gives the new troves timestamp in that
+        # case. We do a normal join against UserGroups here to make sure
+        # we check this trove for every user group, not just user groups
+        # who currently have permissions for troves on the branch. The
+        # WHERE clause restricts us to adding rows where we have something
+        # currently latest or where we have permissions to see the not
+        # hidden new trove.
+        #
+        # Note that the WHEN clause in the CASE is nearly the inverse of the
+        # WHERE clause after the OR. That's important to make sure we don't try
+        # to insert NULLs.
+        sql1 = """
+        INSERT INTO tmpNewLatest(userGroupId, itemId, branchId, flavorId,
+                                 versionId, latestType)
+        SELECT UserGroups.userGroupId, tmpNewTroves.itemId,
+               tmpNewTroves.branchId, tmpNewTroves.flavorId,
+               CASE
+                   WHEN Nodes.finalTimestamp > tmpNewTroves.finalTimestamp OR
+                        ugi.instanceId IS NULL OR
+                        tmpNewTroves.hidden = 1
+                   THEN lc.versionId
+                   ELSE tmpNewTroves.versionId
+               END AS latestVersionId,
+               %(LATEST_TYPE_ANY)d
+        FROM tmpNewTroves
+        CROSS JOIN UserGroups
+        LEFT OUTER JOIN UserGroupInstancesCache AS ugi ON
+                ugi.instanceId = tmpNewTroves.instanceId AND
+                ugi.userGroupId = UserGroups.userGroupId
+        LEFT OUTER JOIN LatestCache AS lc ON
+                tmpNewTroves.itemId = lc.itemId AND
+                tmpNewTroves.branchId = lc.branchId AND
+                tmpNewTroves.flavorId = lc.flavorId AND
+                UserGroups.userGroupId = lc.userGroupId AND
+                lc.latestType = %(LATEST_TYPE_ANY)d
+        LEFT OUTER JOIN Nodes ON lc.itemId = Nodes.itemId AND
+                                 lc.versionId = Nodes.versionId
+        WHERE
+            lc.versionId IS NOT NULL OR
+            (ugi.instanceId IS NOT NULL AND tmpNewTroves.hidden = 0)
+        """ % d
+        #import epdb;epdb.st()
+        cu.execute(sql1)
+
+        # LATEST_TYPE_PRESENT -- this is the same as LATEST_TYPE_ANY, but
+        # if a REMOVED type is being added stick with whatever was already
+        # in the latest table (unless there is nothing in the latest table;
+        # in that case we don't add anything here either)
+        sql2 = """
+        INSERT INTO tmpNewLatest(userGroupId, itemId, branchId, flavorId,
+                                 versionId, latestType)
+        SELECT UserGroups.userGroupId, tmpNewTroves.itemId,
+               tmpNewTroves.branchId, tmpNewTroves.flavorId,
+               CASE
+                   WHEN Nodes.finalTimestamp > tmpNewTroves.finalTimestamp OR
+                        tmpNewTroves.troveType = %(TROVE_TYPE_REMOVED)d OR
+                        ugi.instanceId IS NULL OR
+                        tmpNewTroves.hidden = 1
+                   THEN lc.versionId
+                   ELSE tmpNewTroves.versionId
+               END AS latestVersionId,
+               %(LATEST_TYPE_PRESENT)d
+        FROM tmpNewTroves
+        CROSS JOIN UserGroups
+        LEFT OUTER JOIN UserGroupInstancesCache AS ugi ON
+                ugi.instanceId = tmpNewTroves.instanceId AND
+                ugi.userGroupId = UserGroups.userGroupId
+        LEFT OUTER JOIN LatestCache AS lc ON
+                tmpNewTroves.itemId = lc.itemId AND
+                tmpNewTroves.branchId = lc.branchId AND
+                tmpNewTroves.flavorId = lc.flavorId AND
+                UserGroups.userGroupId = lc.userGroupId AND
+                lc.latestType = %(LATEST_TYPE_PRESENT)d
+        LEFT OUTER JOIN Nodes ON lc.itemId = Nodes.itemId AND
+                                 lc.versionId = Nodes.versionId
+        WHERE
+                lc.versionId IS NOT NULL OR
+                (tmpNewTroves.troveType != %(TROVE_TYPE_REMOVED)d AND
+                 tmpNewTroves.hidden = 0 AND
+                 ugi.instanceId IS NOT NULL)
+        """ % d
+        cu.execute(sql2)
+
+        # LATEST_TYPE_NORMAL -- this is the same as LATEST_TYPE_PRESENT, but
+        # if a REDIRECT type is latest omit the row entirely
+        sql3 = """
+        INSERT INTO tmpNewLatest(userGroupId, itemId, branchId, flavorId,
+                                 versionId, latestType)
+        SELECT tmpNewLatest.userGroupId, tmpNewLatest.itemId,
+               tmpNewLatest.branchId, tmpNewLatest.flavorId,
+               tmpNewLatest.versionId, %(LATEST_TYPE_NORMAL)d
+        FROM tmpNewLatest JOIN Instances USING
+                (itemId, versionId, flavorId)
+        WHERE
+                tmpNewLatest.latestType = %(LATEST_TYPE_PRESENT)d AND
+                (Instances.troveType != %(TROVE_TYPE_REDIRECT)d OR
+                 Instances.isPresent = %(INSTANCE_PRESENT_HIDDEN)d)
+        """ % d
+        cu.execute(sql3)
+
+        if self.db.driver == 'postgresql':
+            cu.execute("DELETE FROM LatestCache USING tmpNewTroves WHERE"
+                        "   LatestCache.itemId = tmpNewTroves.itemId AND "
+                       "    LatestCache.branchId = tmpNewTroves.branchId AND "
+                       "    LatestCache.flavorId = tmpNewTroves.flavorId")
+        else:
+            new = list(cu.execute("SELECT DISTINCT itemId, branchId, "
+                                  "flavorId FROM tmpNewTroves"))
+            for (i, b, f) in new:
+                cu.execute("DELETE FROM LatestCache WHERE "
+                           "itemId = ? AND branchId = ? AND "
+                           "flavorId = ?", i, b, f)
+
+        cu.execute("""
+                INSERT INTO LatestCache(userGroupId, itemId, branchId,
+                                        flavorId, versionId, latestType)
+                    SELECT userGroupId, itemId, branchId, flavorId,
+                           versionId, latestType FROM tmpNewLatest""")
+
         self.depAdder = None
 
     def updateMetadata(self, troveName, branch, shortDesc, longDesc,
