@@ -1233,11 +1233,24 @@ def setupTempTables(db):
             flavorId      INTEGER NOT NULL,
             versionId     INTEGER NOT NULL,
             instanceId    INTEGER NOT NULL,
+            hidden        INTEGER NOT NULL,
             oldInstanceId INTEGER,
             finalTimestamp      NUMERIC(13,3) NOT NULL,
             troveType       INTEGER NOT NULL DEFAULT 0
         ) %(TABLEOPTS)s""" % db.keywords)
         db.tempTables["tmpNewTroves"] = True
+
+    if "tmpNewLatest" not in db.tempTables:
+        cu.execute("""
+        CREATE TEMPORARY TABLE tmpNewLatest(
+            userGroupId     INTEGER NOT NULL,
+            itemId          INTEGER NOT NULL,
+            branchId        INTEGER NOT NULL,
+            flavorId        INTEGER NOT NULL,
+            versionId       INTEGER NOT NULL,
+            latestType      INTEGER NOT NULL
+        ) %(TABLEOPTS)s""" % db.keywords)
+        db.tempTables["tmpNewLatest"] = True
 
     # for processing markRemoved
     if "tmpRemovals" not in db.tempTables:
